# apps/console-web/src/shared/api/types.ts
@@ -32,6 +32,9 @@ export type RuntimeConfiguration = components["schemas"]["RuntimeConfiguration"]
 export type AppEnvironmentInput = components["schemas"]["AppEnvironmentInput"];
 export type AppEnvironmentCreateInput = components["schemas"]["AppEnvironmentCreateInput"];
 export type AppEnvironment = components["schemas"]["AppEnvironment"];
+export type AppVolume = components["schemas"]["AppVolume"];
+export type AppVolumeMutation = components["schemas"]["AppVolumeMutation"];
+export type StorageProfile = components["schemas"]["StorageProfile"];
 export type DeploymentInput = components["schemas"]["DeploymentInput"];
 export type DeploymentPreviewInput = components["schemas"]["DeploymentPreviewInput"];
 export type DeploymentPreview = components["schemas"]["DeploymentPreview"];
